[package]
name = "kanaweb-server"
version = "0.1.0"
edition = "2021"
description = "Tiny static + PUT webserver for the Flashcards app"
license = "GPL-3.0-or-later"

[[bin]]
name = "kanaweb-server"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
